# Kinematics-Aware-Path-Planning-for-Autonomous-Agents

./: README.md
docs/: kinematics_theory.tex  simulation_setup_guide.md
kinematic_nav_pkg/: CMakeLists.txt  package.xml
kinematic_nav_pkg/config/: navigation.rviz  navigator_params.yaml
kinematic_nav_pkg/include/kinematic_nav_pkg/: differential_drive_kinematics.hpp  obstacle_detector.hpp  pid_controller.hpp  recovery_manager.hpp  velocity_smoother.hpp
kinematic_nav_pkg/launch/: navigation.launch.py  simulation.launch.py
kinematic_nav_pkg/src/: point_to_point_navigator.cpp
kinematic_nav_pkg/test/: test_obstacle_detector.cpp  test_pid_controller.cpp  test_recovery_manager.cpp  test_velocity_smoother.cpp
